test/error/iface/err1.rzy

component
  Err1
    slot funcA();
    slot funcB();

  implementation elementary

    slot funcA()
    end

  end

